# TinyHippieEngine

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING_LLMS.md  Makefile  README.md  app.cpp  app.h  camera.h  cmake_install.cmake  gfxlab  gfxlab.data  gfxlab.html  gfxlab.js  gfxlab.wasm  logger.h  main.cpp  shader.h  shell.html  simplex.frag  texture.h
Resources/: bridge.mtl  deco.basis  grassfloor.basis  ground.basis  sup.basis  triangle.gltf  water.basis
Shaders/: c64.frag  c64.vert  fragment.shader  image.frag  image.vert  intro_logo.frag  intro_logo.vert  label.frag  label.vert  lamp.frag  lamp.vert  light.frag  light.vert  meshnode.frag  meshnode.vert  model.frag  model.vert  particle.frag  particlefx.frag  particlefx.vert  phongshape.frag  phongshape.vert  physicsdebug.frag  physicsdebug.vert  rast.frag  rast.vert  rasterbars.frag  rasterbars.vert  shader.frag  shader.vert  simple.frag  simple.vert  spinner.frag  spinner.vert  starwars.frag  starwars.vert  status.frag  status.vert  tt.frag  tt.vert  (+3 more)
include/: CustomComponent.h  IScene.h  SceneNode.h  abstractcomponent.h  app.h  audioplayer.h  audiosystem.h  c64scene.h  camera.h  customcomponent.h  demoscene.h  enforcer.h  icomponent.h  introscene.h  iscene.h  logger.h  mesh.h  miniaudio.h  model.h  particle.h  particlenodescene.h  particlescene.h  particlesystem.h  plane.h  planecomponent.h  planevisualizer.h  renderdevice.h  scenelifecycle.h  scenemanager.h  scenenode.h  shader.h  simplescene.h  textsprite.h  texture.h  truetypescene.h  visualizerbase.h  wildcopperscene.h
include/glad/: glad.h
scripts/: build_desktop.sh  build_web.sh  check_architecture.sh  run_tests.sh
source/: SceneNode.cpp  animationclip.cpp  animationclip.h  animationplayer.cpp  animationplayer.h  app.cpp  audioplayer.cpp  audiosystem.cpp  c64scene.cpp  camera.h  debugui.cpp  debugui.h  demoscene.cpp  enforcer.cpp  glad.c  glosifyscene.cpp  glosifyscene.h  gltfnodescene.cpp  gltfnodescene.h  imagenode.cpp  imagenode.h  imagevisualizer.cpp  imagevisualizer.h  introscene.cpp  labnodescene.cpp  labnodescene.h  logger.cpp  main.cpp  mesh.h  meshasset.cpp  meshasset.h  meshassetcache.cpp  meshassetcache.h  meshnode.cpp  meshnode.h  meshnodescene.cpp  meshnodescene.h  meshvisualizer.cpp  meshvisualizer.h  model.cpp  (+66 more)
tests/: animationclip_test.cpp  animationplayer_test.cpp  camera_test.cpp  iscene_test.cpp  meshasset_test.cpp  meshassetcache_test.cpp  physicsworld_test.cpp  scenelifecycle_test.cpp  scenemanager_test.cpp  scenenode_test.cpp  skinning_test.cpp
